added media and the main heading

--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
                 suscipit necessitatibus fuga qui nesciunt et harum reiciendis!</p>
         </div>
     </div>
-</div>
+    <i class="fas fa-angle-left change-backgrund fa-2x"></i>
+    <i class="fas fa-angle-right change-backgrund fa-2x"></i>
+    <ul class="bullets">
+        <li></li>
+        <li class="active"></li>
+        <li></li>
+    </ul>
+</div>  
     <!-- End Landing -->
 </body>
 </html>
