added a services section

--- a/index.html
+++ b/index.html
@@ -62,5 +62,62 @@
     </ul>
 </div>  
     <!-- End Landing -->
+
+    <!-- Start Serveces -->
+    <div class="serveces">
+        <div class="container">
+            <div class="main-heahing">
+                <h2>Serveces</h2>
+                   <p>
+                     provident totam accusantium, rerum ipsa reiciendis cum
+                  </p>
+            </div>
+
+            <div class="serveces-container">
+                <div class="srv-box">
+                    <i class="fas fa-desktop fa-3x"></i>
+            <div class="text">
+                        <h3>vorem amear intutive </h3>
+                    <p>
+                        nostrum eaque corrupti quos, tenetur repellendus deserunt alias repellat molestiae 
+                        nostrum eaque corrupti quos, tenetur repellendus deserunt alias repellat molestiae 
+                    </p>
+            </div>
+                </div>
+                <div class="srv-box">
+                    <i class="fas fa-pencil-ruler  fa-3x"></i>
+            <div class="text">
+                        <h3>vorem amear intutive </h3>
+                    <p>
+                        nostrum eaque corrupti quos, tenetur repellendus deserunt alias repellat molestiae 
+                        nostrum eaque corrupti quos, tenetur repellendus deserunt alias repellat molestiae 
+                    </p>
+            </div>
+                </div>
+                <div class="srv-box">
+                    <i class="fas fa-cog fa-3x"></i>
+            <div class="text">
+                        <h3>vorem amear intutive </h3>
+                    <p>
+                        nostrum eaque corrupti quos, tenetur repellendus deserunt alias repellat molestiae 
+                        nostrum eaque corrupti quos, tenetur repellendus deserunt alias repellat molestiae 
+                    </p>
+            </div>
+                </div>
+                <div class="srv-box">
+                    <i class="fas fa-camera fa-3x"></i>
+            <div class="text">
+                        <h3>vorem amear intutive </h3>
+                    <p>
+                        nostrum eaque corrupti quos, tenetur repellendus deserunt alias repellat molestiae 
+                        nostrum eaque corrupti quos, tenetur repellendus deserunt alias repellat molestiae 
+                    </p>
+            </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- End Serveces -->
 </body>
 </html>
