--- a/index.html
+++ b/index.html
@@ -119,5 +119,23 @@
         </div>
     </div>
     <!-- End Serveces -->
+
+    <!-- Start Design -->
+    <div class="design">
+        <div class="image">
+            <img src="./images/png-clipart-iphone-6-plus-apple-iphone-6-iphone-6s-chip-a8-gadget-mobile-phone-case.png" alt="phone">
+        </div>
+
+        <div class="text">
+            <h2>Our Desingn Comes With....</h2>
+            <ul>
+                <li>Responsive Design</li>
+                <li>Modern and Clear Desingn</li>
+                <li>Clear code</li>
+                <li>Browser Friendly</li>
+            </ul>
+        </div>
+    </div>
+    <!-- End Design -->
 </body>
 </html>
