--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
     <!-- Start Serveces -->
     <div class="serveces">
         <div class="container">
-            <div class="main-heahing">
+            <div class="main-heading">
                 <h2>Serveces</h2>
                    <p>
                      provident totam accusantium, rerum ipsa reiciendis cum
                   </p>
             </div>
-
+   
             <div class="serveces-container">
                 <div class="srv-box">
                     <i class="fas fa-desktop fa-3x"></i>
@@ -123,7 +123,7 @@
     <!-- Start Design -->
     <div class="design">
         <div class="image">
-            <img src="./images/png-clipart-iphone-6-plus-apple-iphone-6-iphone-6s-chip-a8-gadget-mobile-phone-case.png" alt="phone">
+            <img src="./images/iphone-card-40-iphone14pro-202209_FMT_WHH.jpg" alt="phone">
         </div>
 
         <div class="text">
@@ -137,5 +137,83 @@
         </div>
     </div>
     <!-- End Design -->
+
+    <!-- Start Portfolio -->
+
+    <div class="portfolio">
+        <div class="container">
+            <div class="main-heading">
+                <h2>Portfolio</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae itaque libero iusto ipsa accusantium amet veritatis modi perferendis.
+                     Et possimus unde quisquam deleniti sunt eum nam sequi labore quidem inventore.</p>
+            </div>
+            <ul class="shuffle">
+                <li>All</li>
+                <li class="active">App</li>
+                <li>Photo</li>
+                <li>Web</li>
+                <li>Print</li>
+            </ul>
+        </div>
+        <div class="image-container">
+            <div class="box">
+                <img src="./images/portfolio-01.jpg" alt="portfolio">
+                <div class="caption">
+                    <h4>Awsome image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./images/portfolio-02.png" alt="portfolio">
+                <div class="caption">
+                    <h4>Awsome image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./images/portfolio-03.jpg" alt="portfolio">
+                <div class="caption">
+                    <h4>Awsome image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./images/portfolio-04.jpg" alt="portfolio">
+                <div class="caption">
+                    <h4>Awsome image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./images/portfolio-5.jpg" alt="portfolio">
+                <div class="caption">
+                    <h4>Awsome image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./images/portfolio-6.jpg" alt="portfolio">
+                <div class="caption">
+                    <h4>Awsome image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./images/portfolio-7.jpg" alt="portfolio">
+                <div class="caption">
+                    <h4>Awsome image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./images/portfolio-08.jpg" alt="portfolio">
+                <div class="caption">
+                    <h4>Awsome image</h4>
+                    <p>Photography</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Portfolio -->
 </body>
 </html>
