--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <li>Print</li>
             </ul>
         </div>
-        <div class="image-container">
+        <div class="imgs-container">
             <div class="box">
                 <img src="./images/portfolio-01.jpg" alt="portfolio">
                 <div class="caption">
@@ -212,8 +212,37 @@
                     <p>Photography</p>
                 </div>
             </div>
+
+            <a href="#" class="more">more</a>
         </div>
     </div>
     <!-- End Portfolio -->
+
+    <!-- Start Video -->
+    <div class="video">
+        <video autoplay muted loop>
+            <source src="./images/Singing nightingale. The best bird song.mp4" type="video/mp4"/>
+        </video>
+        <div class="text">
+            <h2>Super Awsome Video Here</h2>
+            <p>Its All You Need</p>
+            <button>See More</button>
+        </div>
+    </div>
+    <!-- End Video -->
+
+    <!-- Start About -->
+
+    <div class="about">
+        <div class="container">
+            <div class="main-heading">
+                <h2>About Us</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dolorum dolor aliquam qui quibusdam voluptates!
+                     Rem dolor quisquam dolorum quibusdam eius sit optio quo inventore, quia itaque nisi id nam!</p>
+            </div>
+            <img src="./images/about.jpg" alt="">
+        </div>
+    </div>
+    <!-- End About -->
 </body>
 </html>
