--- a/index.html
+++ b/index.html
@@ -237,12 +237,38 @@
         <div class="container">
             <div class="main-heading">
                 <h2>About Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dolorum dolor aliquam qui quibusdam voluptates!
+                <p> adipisicing elit. Delectus dolorum dolor aliquam qui quibusdam voluptates!
                      Rem dolor quisquam dolorum quibusdam eius sit optio quo inventore, quia itaque nisi id nam!</p>
             </div>
-            <img src="./images/about.jpg" alt="">
+            <img src="./images/bas.jpg" alt="">
         </div>
     </div>
     <!-- End About -->
+    <!-- Start Stats -->
+    <div class="stats">
+        <div class="container">
+            <div class="box">
+                <i class="fas fa-mug-hot"></i>
+                <div class="number">1.234</div>
+                <p>Coffee Drinks</p>
+            </div>
+            <div class="box">
+                <i class="far fa-folder"></i>
+                <div class="number">256</div>
+                <p>Completed Projects</p>
+            </div>
+            <div class="box">
+                <i class="far fa-envelope"></i>
+                <div class="number">1.734</div>
+                <p>Mail Send</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-trophy"></i>
+                <div class="number">17</div>
+                <p>Awards Received</p>
+            </div>
+        </div>
+    </div>
+    <!-- End Stats -->
 </body>
 </html>
