--- a/index.html
+++ b/index.html
@@ -270,5 +270,70 @@
         </div>
     </div>
     <!-- End Stats -->
+
+    <!-- Start Skills -->
+
+    <div class="our-skills">
+        <div class="container">
+            <div class="testimonials">
+                <h3>Testimonials</h3>
+                <p>adipisicing elit. Ipsum, omnis cumque eligendi enim pariatur cum id nisi veniam ipsa,
+                     quidem quas recusandae est sunt sit non labore dicta doloremque ducimus.</p>
+
+                     <div class="content">
+                        <img src="./images/téléchargement (1).png" alt="">
+                        <div class="text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores deleniti a sapiente necessitatibus 
+                            placeat corrupti iusto minus, reprehenderit, consequuntur animi laboriosam aliquam accusantium harum expedita, hic commodi aspernatur fugit quaerat.
+                            <p>John Doe , CEO</p>
+                        </div>
+                     </div>
+                     <div class="content">
+                        <img src="./images/téléchargement.png" alt="">
+                        <div class="text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores deleniti a sapiente necessitatibus 
+                            placeat corrupti iusto minus, reprehenderit, consequuntur animi laboriosam aliquam accusantium harum expedita, hic commodi aspernatur fugit quaerat.
+                            <p>John Doe , CEO</p>
+                        </div>
+                     </div>
+                     <ul class="bullets">
+                        <li></li>
+                        <li class="active"></li>
+                        <li></li>
+                     </ul>
+            </div>
+            <div class="skills">
+                <h3>Skills</h3>
+                <p>adipisicing elit. Ipsum, omnis cumque eligendi enim pariatur cum id nisi veniam ipsa,
+                     quidem quas recusandae est sunt sit non labore dicta doloremque ducimus.</p>
+
+                     <div class="prog-holder">
+                        <h4>Adobe</h4>
+                        <div class="prog">
+                            <span style="width: 90%" data-progress="90%"></span>
+                        </div>
+                     </div>
+                     <div class="prog-holder">
+                        <h4>Html &amp; Css</h4>
+                        <div class="prog">
+                            <span style="width: 85%" data-progress="85%"></span>
+                        </div>
+                     </div>
+                     <div class="prog-holder">
+                        <h4>JavaScript</h4>
+                        <div class="prog">
+                            <span style="width: 80%" data-progress="80%"></span>
+                        </div>
+                     </div>
+                     <div class="prog-holder">
+                        <h4>Php</h4>
+                        <div class="prog">
+                            <span style="width: 90%" data-progress="90%"></span>
+                        </div>
+                     </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Skills -->
 </body>
 </html>
