desing skills section

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                      <div class="content">
                         <img src="./images/téléchargement (1).png" alt="">
                         <div class="text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores deleniti a sapiente necessitatibus 
+                             Asperiores deleniti a sapiente necessitatibus 
                             placeat corrupti iusto minus, reprehenderit, consequuntur animi laboriosam aliquam accusantium harum expedita, hic commodi aspernatur fugit quaerat.
                             <p>John Doe , CEO</p>
                         </div>
@@ -291,7 +291,7 @@
                      <div class="content">
                         <img src="./images/téléchargement.png" alt="">
                         <div class="text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores deleniti a sapiente necessitatibus 
+                            Asperiores deleniti a sapiente necessitatibus 
                             placeat corrupti iusto minus, reprehenderit, consequuntur animi laboriosam aliquam accusantium harum expedita, hic commodi aspernatur fugit quaerat.
                             <p>John Doe , CEO</p>
                         </div>
