--- a/index.html
+++ b/index.html
@@ -425,5 +425,68 @@
         </div>
     </div>
     <!-- End Pricing -->
+
+    <!-- Start Subcribe -->
+    <div class="subscribe">
+        <div class="container">
+            <form action="">
+                <i class="far fa-envelope fa-lg"></i>
+                <input type="email" placeholder="Your Email">
+                <input type="submit" value="Subscribe">
+            </form>
+            <p>
+               Minus autem consequuntur vel tempore, totam alias necessitatibus quidem voluptatibus tenetur rerum modi omnis, quaerat ea molestiae pariatur iste repellat odit sequi!
+            </p>
+        </div>
+    </div>
+    <!-- End Subcribe -->
+
+    <!-- Start Contact -->
+    <div class="contact">
+        <div class="container">
+            <div class="main-heading">
+                <h2>Contact Us</h2>
+                <p>dolor sit amet consectetur adipisicing elit. Eveniet quos quam eos, facilis ducimus voluptates sapiente nulla dolorum a! Obcaecati illo aspernatur </p>
+
+            </div>
+            <div class="content">
+                <form action="" method="post">
+                    <input type="text" class="main-input" type="text" name="name" placeholder="Your Name">
+                    <input type="text" class="main-input" type="email" name="mail" placeholder="Your Email">
+                    <textarea  class="main-input"  name="message" placeholder="Your Message"></textarea>
+                    <input type="submit" name="submit" value="Sent Message">
+                </form>
+                <div class="info">
+                 <div class="one">
+                    <h4>Get in Touch</h4>
+                    <span class="phone">+00 123.456.789</span>
+                    <span class="phone">+00 123.456.789</span>
+                 </div>
+                  <div class="two">
+                    <h4>Where We Are</h4>
+                    <address>
+                        Awsome Address 17 <br>New York, NYC <br>123-4567-890 <br>USA
+                    </address>
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Contact -->
+    <!-- Start footer -->
+    <div class="footer">
+        <div class="container">
+            <img src="./images/logo.png" alt="Logo">
+            <p>We Are Social</p>
+            <div class="social-icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fas fa-home"></i>
+                <i class="fab fa-linkedin"></i>
+            </div>
+            <p class="copyright">&copy; 2023 <span>Kasper</span> All Right Reserved</p>
+        </div>
+    </div>
+    <!-- End footer -->
 </body>
 </html>
